# ssc

./: .gitignore  Makefile.am  README.md  configure.ac
data/: Makefile.am  Makefile.in  mtc0.pc.in  ssc.pc.in
sdlc/: Makefile.am
sidc/: Makefile.am  bst.c  bst.h  codegen.c  codegen.h  deleted.c  incl.h  interface.c  interface.h  lex.l  main.c  parselib.c  parselib.h  parser.y  sequencer.c  sequencer.h  structure.c  structure.h  symbol.c  symbol.h
ssc/: Makefile.am  config.sh.in  dict.c  dict.h  generated.h.in  generator.sh  incl.h  includes.h  interface.c  interface.h  msg.c  msg.h  private.c  private.h  serialize.c  serialize.h  ssc.h  types.c  types.h
tests/: Makefile.am  lib_dict.c  lib_private.c  libtest.c  libtest.h  logcc.sh.in  subdir.mk
tests/proto_int/: Makefile.in  idl.txt  main.c
tests/proto_int_src/: idl.txt  main.c
tests/test_iface_1/: idl.txt  main.c
tests/test_iface_2/: idl.txt  main.c
tests/test_int/: idl.txt  main.c
tests/test_optional/: idl.txt  main.c
tests/test_optional_ptr/: idl.txt  main.c
tests/test_seq/: idl.txt  main.c
tests/test_string/: idl.txt  main.c
