
bin_PROGRAMS = sdlc

sdlc_SOURCES = source.c         source.h       \
               scanner.c        scanner.h      \
               mpp.c            mpp.h          \
               symbol.c         symbol.h       \
               mdl.c            mdl.h          \
               structure.c      structure.h    \
               class.c          class.h        \
               main.c

sdlc_CFLAGS = -Wall -I$(top_builddir) -I$(top_srcdir) 
sdlc_LDADD = $(top_builddir)/ssc/libssc.la -lm
